Fix Travis CI failure. Use DatatypeConverter instead of Base64 in Tests.